samples/_failures_safe/1761269934_deeaf5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ccd04e67.c: In function ‘main’:
./samples/SAFE/__tmp_ccd04e67.c:150:32: error: ‘decomp’ undeclared (first use in this function)
  150 |     size_t decompressed_size = decomp
      |                                ^~~~~~
./samples/SAFE/__tmp_ccd04e67.c:150:32: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_ccd04e67.c:150:5: error: expected ‘,’ or ‘;’ at end of input
  150 |     size_t decompressed_size = decomp
      |     ^~~~~~
./samples/SAFE/__tmp_ccd04e67.c:150:5: error: expected declaration or statement at end of input
